Add baidu analytics.

--- a/_config.yml
+++ b/_config.yml
@@ -76,3 +76,4 @@ avatar: /images/spade-invert.png
 
 # Analytics
 google_analytics: UA-63795277-1
+baidu_anaylytics: d4e32cdca9ebf5bcb2e1b81ce2c5b050
