--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -351,7 +351,7 @@ valine:
 
 # Support for LiveRe comments system.
 # You can get your uid from https://livere.com/insight/myCode (General web site)
-# livere_uid: MTAyMC8zMDc3My83MzI1
+livere_uid: MTAyMC8zMDc3My83MzI1
 
 # Baidu Share
 # Available value:
