Update before deployment

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -14,7 +14,7 @@ override: false
 favicon: /images/spade.ico
 
 # Set default keywords (Use a comma to separate)
-keywords: "Hexo, NexT"
+keywords: "Nuullll, hexo, shadowsocks, magic, ipv6"
 
 # Set rss to false to disable feed link.
 # Leave rss as empty to use site's feed link.
